loopdowhile.Poucet1.scala.error
Erreur de compilation :
Poucet1:10: error: 'while' expected but 'if' found.
    if (x>=3) {
    ^Poucet1:16: error: '(' expected but ';' found.
  while (sortieTrouvee())
^Poucet1:17: error: illegal start of simple expression
} 
^